Fix overflow-x

--- a/_sass/another/_base.scss
+++ b/_sass/another/_base.scss
@@ -19,6 +19,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 html {
@@ -73,7 +74,6 @@ img {
   display: block;
   max-width: 100%;
   margin: 0 0 1rem;
-  border-radius: 5px;
 }
 
 table {
